# tvproxy

./: .dockerignore  .gitignore  CLAUDE.md  CONCERNS.md  Dockerfile  FFMPEG.md  FIXES.md  LIBAVFORMAT_INTEGRATION.md  Makefile  PLAN.md  README.md  RECORDING-DESIGN.md  REFACTOR_TODO.md  REPO.md  clients_data.json  entrypoint.sh  go.mod  go.sum  hdhr_sources.json  jellyfin_state.json  profiles.json  satip_sources.json  source_profiles.json  users.json
.claude/: settings.local.json
PLANS/: 00-SOURCE-PLUGIN-INTERFACES.md  01-OUTPUT-PLUGIN-INTERFACES.md  02-PHASE1-FOUNDATION.md  07-PHASE2-RECORDING.md  11-PHASE3-DECODE-BRIDGE.md  15-PHASE4-SOURCE-PLUGINS.md  21-PHASE5-SESSION-REFACTOR.md  26-PHASE6-CLEANUP.md  31-PHASE7-FUTURE.md  README.md
gstreamer-plugins/tvproxydemux/: FIXES_NEEDED.md  README.md  go.mod  meson.build  reference_native_padded.go  reference_parsebin.go  test_tvproxydemux.go
gstreamer-plugins/tvproxydemux/src/: gsttvproxydemux.c  gsttvproxydemux.h  gsttvproxymux.c  gsttvproxymux.h  gsttvproxysrc.c  gsttvproxysrc.h  plugin.c
proto/: tvproxy.proto
tmdb_cache/: detail_movie_564.json  search_2001_A_Space_Odyssey__1968_.json  search_22_July__2018_.json  search_65__2023_.json  search_A_Hero__2021_.json  search_Ad_Astra__2019_.json  search_Air__2023_.json  search_Alice_in_Wonderland__2010_.json  search_Alien.json  search_Ambulance__2022_.json  search_American_Sniper__2014_.json  search_Ant-Man_and_the_Wasp_Quantumania__2023_.json  search_Apocalypse_Now__1979_.json  search_Apollo_11__2019_.json  search_Avatar_The_Way_of_Water__2022_.json  search_Batman.json  (+208 more)
(+321 files in other folders)
